replaced logo image, fixed spacing of the margins in heading

--- a/components/cart/stylesheets/heading.module.css
+++ b/components/cart/stylesheets/heading.module.css
@@ -7,6 +7,10 @@
   margin-bottom: 50px;
 }
 
+.logo {
+  margin-top: 40px;
+}
+
 .back-to-menu {
   display: flex;
   flex-direction: row;
