--- a/components/menu/stylesheets/heading.module.css
+++ b/components/menu/stylesheets/heading.module.css
@@ -5,12 +5,13 @@
 }
 
 .event-notes {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 70px;
+  margin-bottom: 50px;
 }
 
 .logo {
   display: block;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 40px;
+  width: 220px;
 }
